# home-service-bot

./: .gitignore  .gitmodules  README.md  README.md.wip
add_markers/: CMakeLists.txt  package.xml
add_markers/src/: add_markers.cpp
home_service_bot/: CMakeLists.txt  package.xml
map/: test.world
map/buildings/test_building/: model.config  model.sdf
pick_objects/: CMakeLists.txt  package.xml
pick_objects/include/pick_objects/: utils.h
pick_objects/src/: pick_objects.cpp
pick_objects/srv/: MarkerPose.srv  MoveToPose.srv
rviz_config/: config.rviz  turtlebot_config.rviz
scripts/: add_marker.sh  add_markers.sh  home_service.sh  pick_objects.sh  script1.sh  script2.sh  test_navigation.sh  test_slam.sh  turtlebot_home_service.sh  turtlebot_launch.sh  turtlebot_test.sh  utils.sh
