<?xml version="1.0"?>
<package format="2">
  <name>home_service_bot</name>
  <version>1.0.0</version>
  <description>
    Metapackage containing packages for a 4-wheeled skid-steer drive home-service bot that picks an object from a location and places it at another, specified by markers.
  </description>

  <author email="gsotirch@gmail.com">George Sotirchos</author>
  <maintainer email="gsotirch@gmail.com">George Sotirchos</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/gsotirchos/home-service-bot</url>

  <buildtool_depend>catkin</buildtool_depend>
  <!--<depend>turtlebot_gazebo</depend>-->
  <depend>mapping_bot</depend>
  <depend>pick_objects</depend>
  <depend>add_markers</depend>
</package>
